# Travel-Optimizer

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: generate_airports_json.py
src/travel_optimizer/: __init__.py
src/travel_optimizer/adapters/io/: exports.py
src/travel_optimizer/adapters/storage/: cache.py  repositories.py
src/travel_optimizer/api/: __init__.py  app.py  celery_app.py  celery_queue.py  celery_tasks.py  flight_insights.py  jobs.py  schemas.py
src/travel_optimizer/core/: config.py  errors.py  models.py  normalization.py
src/travel_optimizer/modules/destinations/: __init__.py  advisor.py  enrichment.py  scoring.py
src/travel_optimizer/modules/flights/: __init__.py  cleaning.py  insights.py  planner.py  scoring.py
src/travel_optimizer/modules/itinerary/: __init__.py  builder.py  tsp.py
src/travel_optimizer/modules/lodging/: __init__.py  scoring.py
src/travel_optimizer/modules/timeoff/: __init__.py  engine.py  holidays.py
src/travel_optimizer/pipeline/: __init__.py  orchestrator.py  results.py  steps.py
src/travel_optimizer/ui/: cli.py
tests/integration/: test_fastflights.py
web/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
web/public/: airports.json  cities.json  countries.json
web/src/: App.tsx  i18n.tsx  main.tsx  sample.ts  styles.css  types.ts
web/src/components/: DestinationCountryPicker.tsx  MultiSelect.tsx  OriginCityPicker.tsx  OriginCountryPicker.tsx  RoutesMap.tsx  TimeoffCalendar.tsx
web/src/components/ui/: badge.tsx  (+5 more)
web/src/utils/: continents.ts  format.ts  itinerary.ts
(+3 files in other folders)
