[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-optimizer"
version = "0.1.0"
description = "Unified travel planning pipeline (timeoff -> destinations -> flights -> lodging -> itinerary)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Travel Optimizer"}]

# Optional providers may require additional setup.
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "plotly>=5.19",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "holidays>=0.45",
  "playwright>=1.43",
  "selenium>=4.18",
  "pulp>=2.7",
  "seaborn>=0.13",
  "matplotlib>=3.8",
  "pycountry>=23.12.11",
  "fast-flights>=2.2",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
]

[project.optional-dependencies]
queue = [
  "celery>=5.4",
  "redis>=5.0",
]

[project.scripts]
travel-optimizer = "travel_optimizer.ui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
